--- a/article.html
+++ b/article.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Daily Journal - Article</title>
 </head>
 <body>
-    <h1><em>Daily Dairy</em></h1>
-    <p>Ini adalah catatan buku online milik [<strong>Jonathan Rafer Setijo</strong>] yang sekarang ini sedang menempuh pendidikan untuk mendapatkan
-    gelar sarjana dalam program Teknik Informatika Universitar Dian Nuswantoro</p>
-    <hr>
-    <ul>
-        <li>
-                qhwugguwd
-        </li>  
-    </ul>
-    
+
+  <h1><i>Daily Journal</i></h1>
+
+  <p>Ini adalah buku catatan online milik <b>Jonathan Rafer Setijo</b> yang sekarang sedang menempuh pendidikan untuk mendapatkan gelar sarjana pada program studi Teknik Informatika, Universitas Dian Nuswantoro Semarang.</p>
+
+  <ul>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="article.html">Article</a></li>
+  </ul>
+
+  <hr>
+
+  <center><b>- Article -</b></center>
+
+  <ol>
+    <li><b>Senin, 6 Oktober 2025</b><br>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A iste aperiam quia hic, obcaecati cupiditate ullam excepturi neque sequi, recusandae sint consequuntur laboriosam quo corrupti, autem nostrum id voluptas incidunt rem esse fugit recusandae praesentium labore natus. Magnam officiis accusamus eum provident iste cum inventore nemo, ex maiores quos, quibusdam, reiciendis esse commodi pariatur natus voluptate laboriosam repellendus a temporibus id fugit! Natus, harum consequuntur quae, nulla corporis ipsum dolores voluptatibus totam quibusdam eveniet numquam!
+    </li><br>
+
+    <li><b>Selasa, 7 Oktober 2025</b><br>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A iste aperiam quia hic, obcaecati cupiditate ullam excepturi neque sequi, recusandae sint consequuntur laboriosam quo corrupti, autem nostrum id voluptas incidunt rem esse fugit recusandae praesentium labore natus. Magnam officiis accusamus eum provident iste cum inventore nemo, ex maiores quos, quibusdam, reiciendis esse commodi pariatur natus voluptate laboriosam repellendus a temporibus id fugit! Natus, harum consequuntur quae, nulla corporis ipsum dolores voluptatibus totam quibusdam eveniet numquam!
+    </li><br>
+
+    <li><b>Rabu, 8 Oktober 2025</b><br>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A iste aperiam quia hic, obcaecati cupiditate ullam excepturi neque sequi, recusandae sint consequuntur laboriosam quo corrupti, autem nostrum id voluptas incidunt rem esse fugit recusandae praesentium labore natus. Magnam officiis accusamus eum provident iste cum inventore nemo, ex maiores quos, quibusdam, reiciendis esse commodi pariatur natus voluptate laboriosam repellendus a temporibus id fugit! Natus, harum consequuntur quae, nulla corporis ipsum dolores voluptatibus totam quibusdam eveniet numquam!
+    </li><br>
+
+    <li><b>Kamis, 9 Oktober 2025</b><br>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A iste aperiam quia hic, obcaecati cupiditate ullam excepturi neque sequi, recusandae sint consequuntur laboriosam quo corrupti, autem nostrum id voluptas incidunt rem esse fugit recusandae praesentium labore natus. Magnam officiis accusamus eum provident iste cum inventore nemo, ex maiores quos, quibusdam, reiciendis esse commodi pariatur natus voluptate laboriosam repellendus a temporibus id fugit! Natus, harum consequuntur quae, nulla corporis ipsum dolores voluptatibus totam quibusdam eveniet numquam!
+    </li><br>
+
+    <li><b>Jumat, 10 Oktober 2025</b><br>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A iste aperiam quia hic, obcaecati cupiditate ullam excepturi neque sequi, recusandae sint consequuntur laboriosam quo corrupti, autem nostrum id voluptas incidunt rem esse fugit recusandae praesentium labore natus. Magnam officiis accusamus eum provident iste cum inventore nemo, ex maiores quos, quibusdam, reiciendis esse commodi pariatur natus voluptate laboriosam repellendus a temporibus id fugit! Natus, harum consequuntur quae, nulla corporis ipsum dolores voluptatibus totam quibusdam eveniet numquam!
+    </li>
+  </ol>
+
+  <hr>
+
+  <p>A11.2024.15542</p>
 
 </body>
 </html>
